# WMS-SAEP-v2

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: memory_maintenance.md  project_overview.md  suggested_commands.md  task_completion.md
.serena/memories/requisicoes/: operational_flow.md
apps/accounts/: forms.py  models.py  urls.py  views.py
apps/accounts/tests/: test_login.py  test_smoke.py
apps/core/: __init__.py  apps.py  exceptions.py  tests.py  urls.py  views.py
apps/core/templates/: base.html  base_auth.html
apps/estoque/: models.py  policies.py  selectors.py
apps/estoque/tests/: test_selectors.py  test_views.py
apps/requisicoes/: forms.py  models.py  policies.py  selectors.py  services.py  transitions.py  urls.py  views.py
apps/requisicoes/templatetags/: requisicoes_tags.py
apps/requisicoes/tests/: test_forms.py  test_policies.py  test_selectors.py  test_services.py  test_templatetags.py  test_views.py
config/: urls.py
config/settings/: base.py  dev.py  test.py
docs/: CONVENTIONS.md  ci-pipeline.md  estado-transicoes-requisicao.md  matriz-permissoes.md  processos-almoxarifado.md  processos-saida-excepcional.md
docs/adr/: 0002-auditoria-por-models-de-dominio.md  0003-numero-publico-contador-anual.md  0004-arquitetura-em-camadas.md
docs/agents/: domain.md  issue-tracker.md
docs/plans/: 10-fila-almox-separar-retirada.md  11-registrar-atendimento.md
tests/: test_ci_workflow.py
(+13 files in other folders)
