[project]
name = "wms-saep-v2"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0,<6.1",
    "django-environ>=0.13.0",
    "django-htmx>=1.27.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py", "*_test.py"]
